src/Base/main/default/objects/Dealer_Order_Line__c/fields/Boat_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Boat_Serial_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The serial number of the Boat Tagged on the associated ERP</description>
    <label>Boat_Serial Number</label>
    <referenceTo>GMBLASERP__Serial_Number__c</referenceTo>
    <relationshipLabel>Dealer Order Lines</relationshipLabel>
    <relationshipName>Dealer_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>