src/Base/main/default/objects/Dealer_Order_Line__c/fields/Dealer_Motor_Request__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Motor_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Motor Request</label>
    <referenceTo>Dealer_Motor_Request__c</referenceTo>
    <relationshipLabel>Dealer Order Lines</relationshipLabel>
    <relationshipName>Dealer_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>