src/Base/main/default/objects/Dealer_Order_Line__c/fields/Dealer_Order__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Order__c</fullName>
    <label>Dealer Order</label>
    <referenceTo>Dealer_Order__c</referenceTo>
    <relationshipLabel>Dealer Order Lines</relationshipLabel>
    <relationshipName>Dealer_Order_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>