src/Base/main/default/objects/Dealer_Order_Line__c/fields/ERP_Order__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERP Order</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Dealer Order Lines</relationshipLabel>
    <relationshipName>Dealer_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>