src/Base/main/default/objects/Dealer_Order_Line__c/fields/Is_For_Factory_Store__c.field-meta.xml
<CustomField>
    <fullName>Is_For_Factory_Store__c</fullName>
    <formula>Dealer_Order__r.Account__r.Is_Internal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is For Factory Store</label>
    <type>Checkbox</type>
</CustomField>