src/Base/main/default/objects/Dealer_Order_Line__c/fields/Legend_Transfer_Request__c.field-meta.xml
<CustomField>
    <fullName>Legend_Transfer_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legend Transfer Request</label>
    <referenceTo>Legend_Transfer_Request__c</referenceTo>
    <relationshipLabel>Dealer Order Lines</relationshipLabel>
    <relationshipName>Dealer_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>