src/Base/main/default/objects/Dealer_Order_Line__c/fields/Line_Total_Calc__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Calc__c</fullName>
    <formula>ERP_Order__r.Grand_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Total Calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>