src/Base/main/default/objects/Dealer_Order_Line__c/fields/Motor_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Motor_Request_Number__c</fullName>
    <formula>Dealer_Motor_Request__r.Name + &apos;-&apos; +  SUBSTITUTE(Name, &apos;DOL-&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Motor_Request_Number</label>
    <type>Text</type>
</CustomField>