src/Base/main/default/objects/Dealer_Order_Line__c/fields/Reserved_For_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Reserved_For_Customer_Id__c</fullName>
    <formula>ERP_Order__r.Reserved_For_Customer_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reserved For Customer Id</label>
    <type>Text</type>
</CustomField>