src/Base/main/default/objects/Dealer_Order_Line__c/fields/Serial_Number_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_Sent_On__c</fullName>
    <description>Date Mercury was notified of the Serial number</description>
    <label>Serial Number Sent On</label>
    <type>Date</type>
</CustomField>