src/Base/main/default/objects/Dealer_Order_Line__c/fields/Serial_Number_Sent_to_Mercury__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_Sent_to_Mercury__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies that Mercury has been notified of the Boat Serial number for their promotion</description>
    <label>Serial Number Sent to Mercury</label>
    <type>Checkbox</type>
</CustomField>